# scenfirepy

./: .gitignore  CITATION.cff  LICENSE  README..md  README.md  pyproject.toml
examples/: Severity_CL-VS_ID190189_u460_20180313.tif  example 1_fire_hazard.py  example 2_fire_severity.py  example_01_fire_hazard.md  example_01_fire_hazard.py  example_02_fire_severity.md  example_02_fire_severity.py
src/scenfirepy/: README.md  __init__.py  burn_probability.py  create_distribution.py  distribution.py  flp20_to_bp_df.py  flp20_to_df.py  flp20_to_raster  io.py  params.py  preprocess.py  raster.py  selection.py  spatial.py  viz.py
