[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scenfirepy"
version = "0.1.0"
description = "Python implementation of the SCENFIRE fire-scenario selection framework"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "CC BY-NC-SA 4.0" }
authors = [{ name = "Your Name" }]

dependencies = [
    "numpy>=1.23,<2.0",
    "pandas>=2.1",
    "scipy>=1.11",
    "powerlaw>=1.5",
    "geopandas>=0.14",
    "shapely>=2.0",
    "pyproj>=3.6",
    "rasterio>=1.3",
    "rioxarray>=0.15",
    "xarray>=2023.6",
    "matplotlib>=3.7"
]

[tool.setuptools]
package-dir = {"" = "src"}
